Login, Signup and Reset password form validation added

--- a/css/custom.css
+++ b/css/custom.css
@@ -10,3 +10,26 @@
 h4{
   text-transform: none !important;
 }
+.login-btn{
+  cursor: pointer;
+}
+.country-code{
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 6px 15px;
+  border-left: 1px solid #d2d8d8;
+  top: 50%;
+  bottom: auto;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+  font-size: 1.3rem;
+  color: #343642;
+}
+.link_btn{
+  cursor: pointer;
+}
