--- a/Project/dashboard/css/custom.css
+++ b/Project/dashboard/css/custom.css
@@ -1,5 +1,49 @@
-.in_icon{
-background-image:url(../images/icons/dollar.png);
-background-repeat: no-repeat;
-background-position: 2px 3px;
+.profile_save{
+  float: right;
+  margin-right: 16px;
+}
+.dob{
+  height: 37.21px;
+}
+
+.cd-error-message {
+  display: inline-block;
+  position: absolute;
+  background: rgba(228, 0, 0, 0.9);
+  padding: .5em;
+  z-index: 2;
+  color: #FFF;
+  border-radius: 0.25em;
+  /* prevent click and touch events */
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s 0, visibility 0 0.2s;
+  -moz-transition: opacity 0.2s 0, visibility 0 0.2s;
+  transition: opacity 0.2s 0, visibility 0 0.2s;
+}
+.cd-error-message::after {
+  /* triangle */
+  content: '';
+  position: absolute;
+  left: 22px;
+  bottom: 100%;
+  height: 0;
+  width: 0;
+  border-bottom: 8px solid rgba(215, 102, 102, 0.9);
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+}
+.cd-error-message.is-visible {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition: opacity 0.2s 0, visibility 0 0;
+  -moz-transition: opacity 0.2s 0, visibility 0 0;
+  transition: opacity 0.2s 0, visibility 0 0;
+}
+.pass-pop{
+  padding: 30px;
+}
+.cd-popup-container{
+  text-align: left !important;
 }
