Added phone varification form

--- a/Project/dashboard/css/bootstrap-extended.css
+++ b/Project/dashboard/css/bootstrap-extended.css
@@ -571,7 +571,7 @@ button:focus {
     .header-navbar.navbar-semi-dark .navbar-nav li {
       line-height: 1; }
     .header-navbar.navbar-semi-dark .navbar-nav .nav-link {
-      color: #55595c; }
+      color: #FFFFFF; }
     .header-navbar.navbar-semi-dark .navbar-nav .active.nav-link {
       background-color: rgba(0, 0, 0, 0.03); }
     .header-navbar.navbar-semi-dark .navbar-nav .disabled.nav-link {
