--- a/Project/dashboard/css/doc_item_card.css
+++ b/Project/dashboard/css/doc_item_card.css
@@ -1,205 +1,108 @@
-.demo-frame header, .demo-frame h1, .demo-frame .demo-conversion {
-  display: none;
+.flip-container {
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -o-perspective: 1000;
+  perspective: 1000;
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+  margin: 10px;
+	border: 1px solid #ccc;
 }
-.demo-wrapper {
-  min-height: 500px;
-}
-.bsap {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-  .flip-container {
-    -webkit-perspective: 1000;
-    -moz-perspective: 1000;
-    -ms-perspective: 1000;
-    perspective: 1000;
 
-    -ms-transform: perspective(1000px);
-    -moz-transform: perspective(1000px);
-    -moz-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-
-    border: 1px solid #ccc;
-  }
-  /* START: Accommodating for IE */
-  .flip-container:hover .back, .flip-container.hover .back {
-    -webkit-transform: rotateY(0deg);
-    -moz-transform: rotateY(0deg);
-    -o-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-  }
-
-  .flip-container:hover .front, .flip-container.hover .front {
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
+	.flip-container:hover .flipper,
+  .flip-container.hover .flipper {
+		-webkit-transform: rotateY(180deg);
+		-moz-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-  }
-
-  /* END: Accommodating for IE */
+		transform: rotateY(180deg);
+	}
 
 .flip-container, .front, .back {
-  width: 320px;
-  height: 427px;
+	width: 160px;
+	height: 200px;
 }
 
 .flipper {
-  -webkit-transition: 0.6s;
-  -webkit-transform-style: preserve-3d;
-  -ms-transition: 0.6s;
+	-webkit-transition: 0.6s;
+	-webkit-transform-style: preserve-3d;
 
-  -moz-transition: 0.6s;
-  -moz-transform: perspective(1000px);
-  -moz-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
+	-moz-transition: 0.6s;
+	-moz-transform-style: preserve-3d;
 
-  transition: 0.6s;
-  transform-style: preserve-3d;
+  -o-transition: 0.6s;
+	-o-transform-style: preserve-3d;
 
-  position: relative;
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
 }
 
 .front, .back {
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
-
-  -webkit-transition: 0.6s;
-  -webkit-transform-style: preserve-3d;
-  -webkit-transform: rotateY(0deg);
-
-  -moz-transition: 0.6s;
-  -moz-transform-style: preserve-3d;
-  -moz-transform: rotateY(0deg);
-
-  -o-transition: 0.6s;
-  -o-transform-style: preserve-3d;
-  -o-transform: rotateY(0deg);
-
-  -ms-transition: 0.6s;
-  -ms-transform-style: preserve-3d;
-  -ms-transform: rotateY(0deg);
-
-  transition: 0.6s;
-  transform-style: preserve-3d;
-  transform: rotateY(0deg);
-
-  position: absolute;
-  top: 0;
-  left: 0;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+	backface-visibility: hidden;
+overflow-wrap: break-word;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .front {
-  -webkit-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  background: lightgreen;
-  z-index: 2;
+	/*background: url(http://davidwalsh.name/demo/dwflip.jpg) 0 0 no-repeat;*/
+  background-color: green;
+	z-index: 2;
 }
 
 .back {
-  background: lightblue;
-  -webkit-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -o-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+	transform: rotateY(180deg);
+
+	background: #f8f8f8;
 }
 
 .front .name {
-  font-size: 2em;
-  display: inline-block;
-  background: rgba(33, 33, 33, 0.9);
-  color: #f8f8f8;
-  font-family: Courier;
-  padding: 5px 10px;
-  border-radius: 5px;
-  bottom: 60px;
-  left: 25%;
-  position: absolute;
-  text-shadow: 0.1em 0.1em 0.05em #333;
-  display: none;
+	font-size: 2em;
+	display: inline-block;
+	background: rgba(33, 33, 33, 0.9);
+	color: #f8f8f8;
+	font-family: Courier;
+	padding: 5px 10px;
+	border-radius: 5px;
+	bottom: 60px;
+	left: 25%;
+	position: absolute;
+	text-shadow: 0.1em 0.1em 0.05em #333;
 
-  -webkit-transform: rotate(-20deg);
-  -moz-transform: rotate(-20deg);
-  -ms-transform: rotate(-20deg);
-  transform: rotate(-20deg);
+	-webkit-transform: rotate(-20deg);
+	-moz-transform: rotate(-20deg);
+  -o-transform: rotate(-20deg);
+	transform: rotate(-20deg);
 }
 
 .back-logo {
-  position: absolute;
-  top: 40px;
-  left: 90px;
-  width: 160px;
-  height: 117px;
-  background: url(logo.png) 0 0 no-repeat;
+	position: absolute;
+	top: 40px;
+	left: 90px;
+	width: 160px;
+	height: 117px;
+	background: url(http://davidwalsh.name/demo/logo.png) 0 0 no-repeat;
 }
-
+.inner-flip{
+  padding: 10px;
+}
 .back-title {
-  font-weight: bold;
-  color: #00304a;
-  position: absolute;
-  top: 180px;
-  left: 0;
-  right: 0;
-  text-align: center;
-  text-shadow: 0.1em 0.1em 0.05em #acd7e5;
-  font-family: Courier;
-  font-size: 22px;
-}
-
-.back p {
-  position: absolute;
-  bottom: 40px;
-  left: 0;
-  right: 0;
-  text-align: center;
-  padding: 0 20px;
-  font-size: 18px;
-}
-
-#carbonads {
-  position: absolute;
-  top: 0;
-  right: 0;
-  display: block;
-  overflow: hidden;
-  padding: 1.5em 1em;
-  max-width: 230px;
-  border: solid 1px hsl(0, 0%, 88%);
-  background-color: hsl(0, 0%, 96%);
-  text-align: center;
-  font-size: 18px;
-  line-height: 1.5;
-  transition: all .2s ease-in-out;
-}
-
-#carbonads:hover {
-  background-color: hsl(0, 0%, 93%);
-}
-
-#carbonads a {
-  text-decoration: none;
-}
-
-#carbonads span {
-  display: block;
-  overflow: hidden;
-}
-
-.carbon-img img {
-  display: block;
-  margin: 0 auto 1em;
-}
-
-.carbon-text {
-  display: block;
-  margin-bottom: .5em;
-}
-
-.carbon-poweredby {
-  display: block;
-  font-size: 16px;
+	font-weight: bold;
+	color: #00304a;
+	position: absolute;
+	top: 180px;
+	left: 0;
+	right: 0;
+	text-align: center;
+	text-shadow: 0.1em 0.1em 0.05em #acd7e5;
+	font-family: Courier;
+	font-size: 2em;
 }
