--- a/Project/dashboard/css/doc_item_card.css
+++ b/Project/dashboard/css/doc_item_card.css
@@ -5,7 +5,7 @@
   perspective: 1000;
   padding-right: 0 !important;
   padding-left: 0 !important;
-  margin: 10px;
+  margin: 3px;
 	border: 1px solid #ccc;
 }
 
@@ -18,10 +18,15 @@
 	}
 
 .flip-container, .front, .back {
-	width: 160px;
+	width: 100%;
 	height: 200px;
 }
 
+.media-center{
+  text-align: center;
+  background: white;
+  padding: 10px;
+}
 .flipper {
 	-webkit-transition: 0.6s;
 	-webkit-transform-style: preserve-3d;
@@ -47,6 +52,7 @@ overflow-wrap: break-word;
 	position: absolute;
 	top: 0;
 	left: 0;
+  border-bottom: 1px solid #cccccc;
 }
 
 .front {
