--- a/Project/dashboard/css/doc_item_card.css
+++ b/Project/dashboard/css/doc_item_card.css
@@ -6,6 +6,7 @@
   padding-right: 0 !important;
   padding-left: 0 !important;
   margin: 3px;
+  cursor: pointer;
 	border: 1px solid #ccc;
 }
 
@@ -22,7 +23,12 @@
 	height: 200px;
 }
 
-.media-center{
+.media-center-file{
+  text-align: center;
+  background: white;
+  padding: 17px;
+}
+.media-center-folder{
   text-align: center;
   background: white;
   padding: 10px;
@@ -57,7 +63,10 @@ overflow-wrap: break-word;
 
 .front {
 	/*background: url(http://davidwalsh.name/demo/dwflip.jpg) 0 0 no-repeat;*/
-  background-color: green;
+  background-color: #5cb130;
+  color: white;
+  font-weight: bold;
+  font-family: sans-serif;
 	z-index: 2;
 }
 
@@ -99,6 +108,7 @@ overflow-wrap: break-word;
 }
 .inner-flip{
   padding: 10px;
+  text-align: center;
 }
 .back-title {
 	font-weight: bold;
