--- a/Project/dashboard/css/popup.css
+++ b/Project/dashboard/css/popup.css
@@ -6,7 +6,9 @@
   color: transparent;
   white-space: nowrap;
 }
-
+.dir_description_add{
+  resize: none;
+}
 .cd-nugget-info {
   text-align: center;
   position: absolute;
