--- a/Project/dashboard/css/doc_item_card.css
+++ b/Project/dashboard/css/doc_item_card.css
@@ -75,7 +75,7 @@ overflow-wrap: break-word;
 	-moz-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
 	transform: rotateY(180deg);
-
+  vertical-align: middle;
 	background: #f8f8f8;
 }
 
