--- a/Project/dashboard/css/custom.css
+++ b/Project/dashboard/css/custom.css
@@ -20,7 +20,10 @@
     width: 24%;
   }
 }
-
+ul,li{
+  margin:0;
+  padding: 0;
+}
 @media (min-width: 1200px) {
   .doc-list .col-xl-2{
     width: 16%;
