--- a/Project/dashboard/css/custom.css
+++ b/Project/dashboard/css/custom.css
@@ -36,6 +36,9 @@ ul,li{
   text-align: center;
   margin-top: 5px;
 }
+th{
+  text-align: center;
+}
 .divider{
   position:absolute;
   left:50%;
@@ -141,4 +144,8 @@ ul,li{
 }
 .var-error{
   display: inherit !important;
+}
+.datatable_button:hover{
+  background-color: transparent !important;
+  color: black !important;
 }
