--- a/Project/dashboard/css/custom.css
+++ b/Project/dashboard/css/custom.css
@@ -10,6 +10,40 @@
   font-size: 20px;
   font-weight: bold;
 }
+.chat_icon{
+  position: fixed !important;
+  bottom: 0 !important;
+  right: 0 !important;
+  cursor: pointer;
+  z-index: 999999;
+}
+.chat_card{
+  width: 350px;
+  border: 2px solid red;
+  height: 0px;
+  display: none;
+  padding:10px;
+  background-color: white;
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+  z-index: 1100000;
+}
+.chat_bar{
+  color:white;
+  width: 10px;
+  font-weight:bold;
+  font-size:24px;
+  height: 56px;
+  padding:10px;
+  padding-left:30px;
+  background: red;
+  position: fixed;
+  border-radius:180px;
+  bottom: 20px;
+  right: 15px;
+  z-index: 999980;
+}
 .add_rm{
   text-align: center;
   margin:auto;
@@ -164,5 +198,5 @@ th{
   font-weight: normal;
 }
 td{
-    text-align: center;
+  text-align: center;
 }
