--- a/Project/dashboard/css/custom.css
+++ b/Project/dashboard/css/custom.css
@@ -10,6 +10,16 @@
   font-size: 20px;
   font-weight: bold;
 }
+.chat_content{
+  visibility: hidden;
+  position: fixed;
+  width: 340px;
+  height: 375px;
+  margin-left: -5px;
+  max-height: 375px;
+  margin-top: 67px;
+  overflow-y:scroll;
+}
 .chat_icon{
   position: fixed !important;
   bottom: 0 !important;
@@ -44,6 +54,71 @@
   right: 15px;
   z-index: 999980;
 }
+.chat_header{
+  margin: -8px;
+  height: 35px;
+  color: white !important;
+  padding: 3px;
+  padding-left: 10px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  width: 105% !important;
+  background-color: blue;
+}
+.chat_to_add{
+  margin: -3px;
+  float: right;
+  margin-top: -6px;
+  padding-left: 10px;
+  height: 35px;
+  width: 90%;
+}
+.chat_to{
+  margin: -8px;
+  margin-top: 13px;
+  height: 35px;
+  padding: 3px;
+  padding-left: 10px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  width: 105% !important;
+}
+.type_msg{
+  width: 80%;
+  visibility: hidden;
+  padding-left:  20px;
+  padding-right:  20px;
+  overflow: hidden;
+  position: absolute;
+  border-radius: 10px;
+  bottom: 0;
+  height: 40px;
+  max-height: 100px;
+  min-height: 40px;
+  z-index: 10000;
+  resize: none;
+  left: 0;
+}
+.msg_sub{
+  width: 18%;
+  visibility: hidden;
+  background-color: white;
+  cursor: pointer;
+  border: 0px solid white;
+  padding-left:  12px;
+  padding-right:  20px;
+  position: absolute;
+  text-align: left;
+  bottom: 0;
+  height: 40px;
+  color: #427fe1;
+  resize: none;
+  z-index: 9999;
+  right: 3px;
+}
+
 .add_rm{
   text-align: center;
   margin:auto;
@@ -199,4 +274,92 @@ th{
 }
 td{
   text-align: center;
+}
+
+
+/* CSS talk bubble */
+.talk-bubble-right {
+	margin: 2px;
+  margin-right: 10px;
+  display: inline-block;
+  position: relative;
+	width: 280px;
+	height: auto;
+  float: right;
+  z-index: 10000;
+  border-radius: 10px;
+	background-color: #80ff80;
+}
+.talk-bubble-left {
+	margin: 2px;
+  margin-left: 10px;
+  display: inline-block;
+  position: relative;
+	width: 280px;
+	height: auto;
+  float: left;
+  z-index: 10;
+  border-radius: 10px;
+	background-color: #ffb3b3;
+}
+.chat_div{
+  border: 1px solid black;
+  padding: 3px;
+  margin-top: 2px;
+  background-color: #f3f3f3;
+  cursor: pointer;
+}
+.back_chat{
+  visibility: hidden;
+  position: absolute;
+  color: red;
+  margin-top: -9px;
+  margin-left: -7px;
+}
+.chat_nav{
+  position: fixed;
+  width: 340px;
+  height: 415px;
+  margin-left: -5px;
+  max-height: 415px;
+  margin-top: 67px;
+  overflow-y:scroll;
+}
+.talk-bubble-right:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: auto;
+	right: -10px;
+  top: 0px;
+	bottom: auto;
+  z-index: -1;
+	border: 22px solid;
+	border-color: #80ff80 transparent transparent transparent;
+}
+
+.talk-bubble-left:after{
+	content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+  left: -10px;
+	right: auto;
+  top: 0px;
+	bottom: auto;
+  z-index: -1;
+	border: 20px solid;
+	border-color: #ffb3b3 transparent transparent transparent;
+}
+
+/* talk bubble contents */
+.talktext{
+  padding: 5px;
+	text-align: left;
+}
+.talktext p{
+  /* remove webkit p margins */
+  -webkit-margin-before: 0em;
+  -webkit-margin-after: 0em;
 }
