--- a/Project/dashboard/css/custom.css
+++ b/Project/dashboard/css/custom.css
@@ -254,7 +254,7 @@ th{
 .context-menu-root .fa{
   font:normal normal 17px/2 FontAwesome !important;
 }
-.varify{
+.verify{
   display: inline-block !important;
   float: left;
   margin-right: 10px;
